2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (DefaultFileReader): Silence a warning.
	* src/bytecode.cpp (GenerateClassAccessMethod): Use exception
	chaining for class literals when -source == 1.4.
	* src/control.cpp: 
	* src/control.h (Throwable_initCauseMethod),
	(NoClassDefFoundError_InitStringMethod): Add methods.
	* src/platform.cpp:
	* src/platform.h (US_initCause, U8S_LP_Throwable_RP_Throwable):
	Add fields. Also, shorten names of other long fields.
	* src/set.h:
	* src/system.cpp: Reformat code.

2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintNEGATIVE_ARRAY_SIZE):
	* src/error.h:
	* src/expr.cpp (ProcessArrayCreationExpression): Add caution for
	NEGATIVE_ARRAY_SIZE.

2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstBlock): Add ABRUPT_TRY_FINALLY, to correctly emit
	synchronized blocks in try-finally.
	* src/bytecode.cpp (EmitSynchronizedStatement),
	(ProcessAbruptExit, EmitTryFinally): Correct synchronized
	statement to be safe with asynchronous exceptions, bug 2647.
	(EmitExpression, LoadVariable): Don't optimize away class literal
	or volatile variable qualifying a static reference, because of
	their potential side effects.
	* src/bytecode.h (class MethodStack): Improve, to work with
	synchronized statement fixes - patch 263.

2002-02-18  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (NewTokenIndexArray): Remove dead code, which was
	responsible for bug 2652 before I reworked labeled statements.

2002-02-18  Eric Blake  <ebb9@email.byu.edu>

	* src/gencode.java: Add more optimizations, to reduce the size of
	the Unicode lookup table.
	* src/code.h:
	* src/code.cpp: Regenerate.

2002-02-12  Andrew M. Inggs  <aminggs@yahoo.co.uk>

	* doc/jikes.1: Updated description of @file option to match
	changes made on 2001-12-11.

2002-02-09  Eric Blake  <ebb9@email.byu.edu>

	* doc/jikes.1:
	* src/platform.cpp (U8S_help_header): Update copyright.

2002-02-09  Eric Blake  <ebb9@email.byu.edu>
